--- a/src/app/demo-event/demo-event.component.html
+++ b/src/app/demo-event/demo-event.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-actions>
-        <button mat-button [routerLink]="['/']">
+        <button mat-button [routerLink]="['/']" i18n>
             <mat-icon>exit_to_app</mat-icon>
             Exit DEMO
         </button>
@@ -14,7 +14,7 @@
         <div *ngSwitchCase="true">
             <div fxLayout='row'>
                 <mat-form-field fxFlex="55%">
-                    <mat-label>Choose a date</mat-label>
+                    <mat-label i18n>Choose a date</mat-label>
                     <input matInput [min]="minDate" [matDatepicker]="picker" [(ngModel)]="eventDate">
                     <mat-hint>MM/DD/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
@@ -25,34 +25,34 @@
                 </mat-form-field>
             </div>
             <mat-form-field class="full-width">
-                <mat-label>Title</mat-label>
+                <mat-label i18n>Title</mat-label>
                 <input matInput name="eventTitle" [(ngModel)]="title" data-cy="eventTitle">
             </mat-form-field>
             <mat-form-field class="full-width">
-                <mat-label>Description</mat-label>
+                <mat-label i18n>Description</mat-label>
                 <textarea matInput name="eventDescription" [(ngModel)]="description"
                     data-cy="eventDescription"></textarea>
             </mat-form-field>
             <mat-form-field class="full-width">
-                <mat-label>Location</mat-label>
+                <mat-label i18n>Location</mat-label>
                 <input matInput name="location" [(ngModel)]="location" data-cy="location">
             </mat-form-field>
             <mat-form-field class="full-width">
-                <mat-label>Link to maps</mat-label>
+                <mat-label i18n>Link to maps</mat-label>
                 <input matInput name="mapsUrl" [(ngModel)]="mapsUrl" data-cy="mapsUrl">
                 <mat-icon matSuffix>location_on</mat-icon>
             </mat-form-field>
             <div fxLayout='row'>
-                <mat-slide-toggle [(ngModel)]="isLimitedAttendees" data-cy="attendeeLimitToggle">
+                <mat-slide-toggle [(ngModel)]="isLimitedAttendees" data-cy="attendeeLimitToggle" i18n>
                     Attendee limit
                 </mat-slide-toggle>
                 <mat-form-field *ngIf="isLimitedAttendees" data-cy="maxAttendeesField">
-                    <mat-label>Max number</mat-label>
+                    <mat-label i18n>Max number</mat-label>
                     <input matInput type="number" name="maxAttendees" [(ngModel)]="maxAttendees" data-cy="maxAttendees">
                 </mat-form-field>
             </div>
             <mat-slide-toggle [ngModel]="isTeamAllocations" (ngModelChange)="isTeamAllocations=!isTeamAllocations"
-                data-cy="teamAllocationsToggle">
+                data-cy="teamAllocationsToggle" i18n>
                 Team Allocations
             </mat-slide-toggle>
             <div *ngIf="isTeamAllocations">
@@ -72,7 +72,7 @@
                 </div>
                 <button mat-raised-button [matMenuTriggerFor]="teamColorMenu"
                     [matMenuTriggerData]="{index: subTeams.length}"
-                    (click)="subTeams.push({id: '', color: 'White', size: null })" data-cy="addTeamBtn">
+                    (click)="subTeams.push({id: '', color: 'White', size: null })" data-cy="addTeamBtn" i18n>
                     <mat-icon inline=true>add</mat-icon>
                     Add Team
                 </button>
@@ -86,7 +86,7 @@
             </div>
 
             <div fxLayout='row'>
-                <mat-slide-toggle [ngModel]="isEventFee" (ngModelChange)="isEventFee=!isEventFee">
+                <mat-slide-toggle [ngModel]="isEventFee" (ngModelChange)="isEventFee=!isEventFee" i18n>
                     Event Fee
                 </mat-slide-toggle>
             </div>
@@ -98,12 +98,12 @@
                 <div *ngIf="isStripeAccount">
                     <div *ngIf="isActivatingStripeAccount">
                         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-                        <p>
+                        <p i18n>
                             Your Stripe account is being activated...
                         </p>
                     </div>
                     <div *ngIf="!isActivatingStripeAccount && !isStripeAccountEnabled">
-                        <h3>Your Stripe account is not activated.</h3>
+                        <h3 i18n>Your Stripe account is not activated.</h3>
                         <p>
                             Please complete Stripe onboarding by providing required information.
                             Use <span class="stripe-actionRequired-button">
@@ -116,7 +116,8 @@
                                 </svg>
                             </span> button on your Stripe dashboard.
                         </p>
-                        <a href="https://dashboard.stripe.com/account/status" mat-raised-button class="stripe-button">
+                        <a href="https://dashboard.stripe.com/account/status" mat-raised-button class="stripe-button"
+                            i18n>
                             <mat-icon inline=true>account_balance</mat-icon>
                             Complete Stripe Onboarding
                         </a>
@@ -124,11 +125,11 @@
                 </div>
 
                 <div *ngIf="!isStripeAccount">
-                    <p>
+                    <p i18n>
                         To start accepting payments and moving funds to your bank account through the app,
                         you need set up your account with the internet payment processing platform Stripe.
                     </p>
-                    <button mat-raised-button (click)="createStripeConnectedAccount()" class="stripe-button">
+                    <button mat-raised-button (click)="createStripeConnectedAccount()" class="stripe-button" i18n>
                         <mat-icon inline=true>account_balance</mat-icon>
                         Create Stripe Account
                     </button>
@@ -179,13 +180,13 @@
         </div>
         <div *ngIf="isStripePrice && !participant">Fee {{stripePriceUnitAmount/100 | currency}} </div>
         <div *ngIf="isStripePrice && participant && !isPaid" fxLayout="row" fxLayoutAlign="stretch center">
-            <span>Pay {{stripePriceUnitAmount/100 | currency}} </span>
+            <span i18n>Pay {{stripePriceUnitAmount/100 | currency}} </span>
             <button mat-raised-button style="margin-left: 16px;" (click)="createStripeCheckoutSession()">
                 <mat-icon inline=true>shopping_cart</mat-icon>
                 Proceed to Checkout
             </button>
         </div>
-        <p *ngIf="isPaid">
+        <p *ngIf="isPaid" i18n>
             Paid
             {{paidOn.toLocaleString("en-AU", {dateStyle: "full", timeStyle: "short"})}}
         </p>
@@ -193,17 +194,17 @@
 
     <div [ngSwitch]="isOwner">
         <div *ngSwitchCase="true">
-            <mat-card-content>
+            <mat-card-content i18n>
                 Use the "Invite" button to share the invite URL with your social network.
             </mat-card-content>
             <mat-card-actions>
                 <button mat-raised-button color="primary" (click)="setStatus('IN')" data-cy="eventOwnerJoinBtn"
-                    *ngIf="participant?.status !== 'IN'">
+                    *ngIf="participant?.status !== 'IN'" i18n>
                     <mat-icon inline=true>person_add</mat-icon>
                     JOIN
                 </button>
                 <ng-container *ngTemplateOutlet="sharedButtons"></ng-container>
-                <button mat-raised-button (click)="copyEventInvite()" data-cy="eventInviteBtn">
+                <button mat-raised-button (click)="copyEventInvite()" data-cy="eventInviteBtn" i18n>
                     <mat-icon inline=true>share</mat-icon>
                     INVITE
                 </button>
@@ -211,12 +212,12 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu" yPosition="above">
-                    <button mat-menu-item (click)="deleteEvent()" data-cy="deleteEventBtn" style="color: red;">
+                    <button mat-menu-item (click)="deleteEvent()" data-cy="deleteEventBtn" style="color: red;" i18n>
                         <mat-icon color="warn">delete</mat-icon>
                         DELETE
                     </button>
                     <mat-divider></mat-divider>
-                    <button mat-menu-item (click)="duplicateEvent()">
+                    <button mat-menu-item (click)="duplicateEvent()" i18n>
                         <mat-icon>file_copy</mat-icon>
                         DUPLICATE
                     </button>
@@ -227,14 +228,14 @@
         <mat-card-actions *ngSwitchCase="false">
             <ng-container *ngIf="!isLimitedAttendees || participants.length < (maxAttendees ?? 9999);else waitlist">
                 <button mat-raised-button color="primary" (click)="setStatus('IN')" data-cy="eventJoinBtn"
-                    *ngIf="participant?.status !== 'IN'">
+                    *ngIf="participant?.status !== 'IN'" i18n>
                     <mat-icon inline=true>person_add</mat-icon>
                     JOIN
                 </button>
             </ng-container>
             <ng-template #waitlist>
                 <button mat-raised-button color="primary" (click)="joinWaitlist()" data-cy="eventWaitlistBtn"
-                    *ngIf="participant?.status !== 'WAITLIST'">
+                    *ngIf="participant?.status !== 'WAITLIST'" i18n>
                     <mat-icon inline=true>hourglass_empty</mat-icon>
                     JOIN WAITLIST
                 </button>
@@ -246,12 +247,12 @@
 
 <ng-template #sharedButtons>
     <button mat-raised-button [matMenuTriggerFor]="teamPickMenu" [style]="'background-color:'+participant.teamColor"
-        data-cy="teamPickBtn" *ngIf="isTeamAllocations && participant?.status === 'IN'">
+        data-cy="teamPickBtn" *ngIf="isTeamAllocations && participant?.status === 'IN'" i18n>
         <mat-icon inline=true>palette</mat-icon>
         Pick a Team
     </button>
     <button mat-raised-button color="accent" (click)="setStatus('OUT')" data-cy="notGoingBtn"
-        *ngIf="participant?.status !== 'OUT'">
+        *ngIf="participant?.status !== 'OUT'" i18n>
         <mat-icon inline=true>cancel</mat-icon>
         Not Going
     </button>
@@ -268,14 +269,14 @@
     <mat-tab data-cy="attendeesTab">
         <ng-template mat-tab-label>
             <mat-icon class="mat-tab-icon">groups</mat-icon>
-            <span data-cy="attendeesTabTitle">Attendees {{numberOfAttendees()}}</span>
+            <span data-cy="attendeesTabTitle" i18n>Attendees {{numberOfAttendees()}}</span>
         </ng-template>
         <app-event-participants [participants]="participants" [refusals]="refusals"></app-event-participants>
     </mat-tab>
     <mat-tab data-cy="waitlistTab">
         <ng-template mat-tab-label>
             <mat-icon class="mat-tab-icon">hourglass_empty</mat-icon>
-            <span data-cy="waitlistTabTitle">Waitlist {{waitlist.length}}</span>
+            <span data-cy="waitlistTabTitle" i18n>Waitlist {{waitlist.length}}</span>
         </ng-template>
         <mat-list>
             <mat-list-item *ngFor="let participant of waitlist">
@@ -288,8 +289,8 @@
     <mat-tab label="Messages" hidden>
         <ng-template mat-tab-label>
             <mat-icon class="mat-tab-icon">forum</mat-icon>
-            <span matBadge="#" matBadgeColor="warn" [matBadgeHidden]="!isUnreadMessage"
-                data-cy="messagesTabTitle">Messages</span>
+            <span matBadge="#" matBadgeColor="warn" [matBadgeHidden]="!isUnreadMessage" data-cy="messagesTabTitle"
+                i18n>Messages</span>
         </ng-template>
         <app-demo-messages></app-demo-messages>
     </mat-tab>
