--- a/src/app/demo-home/demo-home.component.html
+++ b/src/app/demo-home/demo-home.component.html
@@ -1,12 +1,13 @@
 <mat-card>
     <mat-card-actions>
-        <button mat-button [routerLink]="['/']">
+        <button mat-button [routerLink]="['/']" i18n>
             <mat-icon>exit_to_app</mat-icon>
             Exit DEMO
         </button>
     </mat-card-actions>
     <mat-card-actions align="end">
-        <button mat-raised-button color="accent" [routerLink]="['/demo-event/new']" data-cy="demoCreateNewEventBtn">
+        <button mat-raised-button color="accent" [routerLink]="['/demo-event/new']" data-cy="demoCreateNewEventBtn"
+            i18n>
             <mat-icon inline=true>add_circle</mat-icon>
             Create New Event
         </button>
@@ -16,7 +17,7 @@
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/demo-event/1']">
         <img matListItemAvatar src="./../../assets/demo-person1.jpg">
-        <h3 matListItemTitle>
+        <h3 matListItemTitle i18n>
             Sunday Breakfast with friends
         </h3>
         <p matListItemLine>
@@ -26,7 +27,7 @@
     </a>
     <a mat-list-item [routerLink]="['/demo-event/2']">
         <img matListItemAvatar src="./../../assets/demo-person2.jpg">
-        <h3 matListItemTitle>
+        <h3 matListItemTitle i18n>
             Volleyball league
         </h3>
         <p matListItemLine>
@@ -36,20 +37,20 @@
     </a>
     <a mat-list-item [routerLink]="['/demo-event/3']">
         <img matListItemAvatar src="./../../assets/demo-person1.jpg">
-        <h3 matListItemTitle>
+        <h3 matListItemTitle i18n>
             Doubles Tennis
         </h3>
-        <p matListItemLine>
+        <p matListItemLine i18n>
             {{date3 | date:'fullDate'}} at
             {{date3 | date:'shortTime'}}
         </p>
     </a>
-    <div mat-subheader>
+    <div mat-subheader i18n>
         Past Events
     </div>
     <a mat-list-item [routerLink]="['/demo-event/4']">
         <img matListItemAvatar src="./../../assets/demo-person3.jpg">
-        <h3 matListItemTitle>
+        <h3 matListItemTitle i18n>
             Football game
         </h3>
         <p matListItemLine>
