--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -176,6 +176,10 @@
                             0))/100 | currency}}<br />
                             Total payable: {{(teamEvent?.stripePriceUnitAmount ?? 0)/100 | currency}}
                         </p>
+                        <mat-slide-toggle [ngModel]="teamEvent?.isPaymentRequired"
+                            (ngModelChange)="updateEvent({isPaymentRequired: $event})" i18n>
+                            Require payment prior to registering
+                        </mat-slide-toggle>
                     </div>
                 </div>
             </div>
@@ -192,7 +196,9 @@
             </p>
         </div>
         <mat-progress-bar *ngIf="isPriceLoading" mode="indeterminate"></mat-progress-bar>
-        <div *ngIf="isStripePrice && !participant">Fee {{(teamEvent?.stripePriceUnitAmount ?? 0)/100 | currency}} </div>
+        <div *ngIf="teamEvent?.isEventFee && isStripePrice && !participant">
+            Fee {{(teamEvent?.stripePriceUnitAmount ?? 0)/100 | currency}}
+        </div>
         <div *ngIf="isStripePrice && participant && !isPaid" fxLayout="row" fxLayoutAlign="stretch center">
             <span>Pay {{(teamEvent?.stripePriceUnitAmount ?? 0)/100 | currency}} </span>
             <button mat-raised-button style="margin-left: 16px;" (click)="createStripeCheckoutSession()" i18n>
