add/edit participant by organiser

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -241,6 +241,10 @@
                         <mat-icon>file_copy</mat-icon>
                         DUPLICATE
                     </button>
+                    <button mat-menu-item (click)="addParticipant()" data-cy="addParticipantBtn" i18n>
+                        <mat-icon>add</mat-icon>
+                        ADD
+                    </button>
                     <!-- <button mat-menu-item (click)="sendEmailToTeam()">
                         <mat-icon>email</mat-icon>
                         EMAIL TO TEAM
