--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -284,7 +284,7 @@
 </ng-template>
 <mat-menu #teamPickMenu="matMenu" yPosition="above">
     <ng-template matMenuContent let-index="index">
-        <button mat-fab *ngFor="let team of subTeams" [style]="'background-color:'+team.color"
+        <button mat-fab *ngFor="let team of availableSubTeams" [style]="'background-color:'+team.color"
             (click)="subTeamColorUpdate(team.color)" data-cy="setTeamColorBtn">
         </button>
     </ng-template>
@@ -296,8 +296,8 @@
             <mat-icon class="mat-tab-icon">groups</mat-icon>
             <span data-cy="attendeesTabTitle" i18n>Attendees {{numberOfAttendees()}}</span>
         </ng-template>
-        <app-event-participants [isOwner]="isOwner" [participants]="participants"
-            [refusals]="refusals"></app-event-participants>
+        <app-event-participants [isOwner]="isOwner" [participants]="participants" [refusals]="refusals"
+            (teamNumbers)="onTeamNumbers($event)"></app-event-participants>
     </mat-tab>
     <mat-tab *ngIf="waitlist.length > 0" data-cy="waitlistTab">
         <ng-template mat-tab-label>
